journal: Fix typo

This would break backwards skipping.

https://bugs.freedesktop.org/show_bug.cgi?id=63250